<resources>
    <string name="app_name">SoloBici</string>
    <string name="titulo">SoloBici</string>
    <string name="Jugar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="TextoAcercaDe">Juego desarrollado en la asignatura PMYDM. Curso 2DAM 2019.
        Ana Guillén Fernández</string>
</resources>
