<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondomenu"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <Button
        android:id="@+id/BotonJugar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Jugar" />

    <Button
        android:id="@+id/BotonConfig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/BotonAcercaDe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/BotonSalir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Salir" />
</LinearLayout>